fixed spacing issue

--- a/font.css
+++ b/font.css
@@ -26,6 +26,7 @@ td{
 
 .box{
     display: flex;
+    justify-content: center;
     flex-direction: row;
     text-align: left;
 }
